@@ -1,3 +1,10 @@
+2005-01-29 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* ospf_packet.c: (ospf_packet_add) If oi->obuf is NULL, print
+	an error message and return.
+	(ospf_read) If the interface state is ISM_InterfaceDown, issue
+	a warning message and ignore the packet.
+
 2005-01-10  Greg Troxel  <gdt@fnord.ir.bbn.com>
 
 	* ospf_packet.h: Remove commented out definition of
